--- a/build.xml
+++ b/build.xml
@@ -95,7 +95,7 @@
         <touch file="${tmp.manifest.file}" verbose="false"/>
         <manifest file="${manifest.file}">
             <attribute name="Built-By" value="${user.name}" />
-            <attribute name="Main-Class" value="com.oathouse.oss.server.ObjectStoreServer" />
+            <attribute name="Main-Class" value="" />
             <section name="${ant.project.name}">
                 <attribute name="Specification-Title" value="${ant.project.name} ${manifest.specification.title}" />
                 <attribute name="Specification-Version" value="${project.version.major}.${project.version.minor}" />
@@ -145,6 +145,7 @@
         <copy file="${dist.javadocs.zip}" tofile="${project.lib.path}/${ant.project.name}-latest-javadocs.jar" />
         <copy file="${dist.sources.jar}" tofile="${project.lib.path}/${ant.project.name}-latest-sources.jar" />
         <copy file="${dist.version.txt}" tofile="${project.lib.path}/${ant.project.name}-latest-version.txt" />
+
         <!-- Now reset the version file with the template header -->
 <!--
         <concat destfile="${dist.version.txt}">
