--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -1,3 +1,10 @@
+libs.AI-STAC_Cannonical.classpath=\
+    ${base}/../../Libraries/aistac-libs/aistac-canonical-latest.jar
+libs.AI-STAC_Cannonical.displayName=AI-STAC Cannonical
+libs.AI-STAC_Cannonical.javadoc=\
+    ${base}/../../Libraries/aistac-libs/aistac-canonical-latest-javadocs.jar!//
+libs.AI-STAC_Cannonical.src=\
+    ${base}/../../Libraries/aistac-libs/aistac-canonical-latest-sources.jar!//
 libs.Apache\ Commons.classpath=\
     ${base}/../../Libraries/thirdpartylibs/commons-cli-1.3.1.jar;\
     ${base}/../../Libraries/thirdpartylibs/commons-codec-1.10.jar;\
