--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,7 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.aistac-canonical.jar}:\
+    ${libs.AI-STAC_Cannonical.classpath}:\
     ${libs.Apache Commons.classpath}:\
     ${libs.JDom.classpath}
 # Space-separated list of extra javac options
@@ -64,8 +64,6 @@ main.class=com.oathouse.microlib.common.io.starter.TaskStarter
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
-project.aistac-canonical=../aistac-canonical
-reference.aistac-canonical.jar=${project.aistac-canonical}/dist/aistac-canonical.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
